@startuml

title __MESUTSRECAP's Class Diagram__\n

  package MesutsRecap {
    class Competitor {
        - points : int
        + Competitor()
        + getDriver()
        + getVehicle()
        + getPoints()
        + setPoints()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    class CompetitorList {
        - competitors : List<Competitor>
        + addCompetitor()
        + getCompetitors()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    class CompetitorsGenerator {
        {static} - startingNumber : int
        - drivers : List<String>
        - vehicles : List<String>
        + getRandomDriver()
        + getRandomVehicle()
        + getRandomCompetitor()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    class Driver {
        - firstname : String
        - lastname : String
        - startingNumber : int
        - driverText : String
        + Driver()
        + getFirstname()
        + getLastname()
        + getStartingNumber()
        + getDriverText()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    class Motorcycle {
        + Motorcycle()
        + getColor()
        + getType()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    enum MotorcycleType {
      Allrounder
      Chopper
      Dirtbike
      Custombike
      Motocross
      Enduro
    }
  }
  

  package MesutsRecap {
    enum ColorType {
      black
      white
      red
      green
      blue
      magenta
    }
  }
  

  package MesutsRecap {
    class Race {
        - startingLineUp : List<Competitor>
        - raceResult : List<Competitor>
        + Race()
        + addCompetitor()
        + generateStartingLineup()
        + race()
        + getCompetitors()
        + getStartingLineUp()
        + getResult()
        + toString()
    }
  }
  

  package MesutsRecap {
    class RacingGame {
        {static} + main()
    }
  }
  

  package MesutsRecap {
    class Tractor {
        + Tractor()
        + getSize()
        + getType()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    enum TractorType {
      Classic
      CabinLux
      Robotics
    }
  }
  

  package MesutsRecap {
    enum TractorSize {
      quad
      small
      medium
      large
      xlarge
      mega
    }
  }
  

  package MesutsRecap {
    class Vehicle {
        - manufacturer : String
        - name : String
        - horsepower : int
        + Vehicle()
        + getManufacturer()
        + getName()
        + getHorsepower()
        + getEngineType()
        + getVehicleText()
        + toString()
        {static} + main()
    }
  }
  

  package MesutsRecap {
    enum EngineType {
      electric
      diesel
      gasoline
    }
  }
  

  Competitor o-- Driver : driver
  Competitor o-- Vehicle : vehicle
  Motorcycle -up-|> Vehicle
  Motorcycle o-- ColorType : color
  Motorcycle o-- MotorcycleType : type
  Motorcycle +-down- MotorcycleType
  Motorcycle +-down- ColorType
  Race o-- CompetitorList : competitors
  Tractor -up-|> Vehicle
  Tractor o-- TractorType : type
  Tractor o-- TractorSize : size
  Tractor +-down- TractorType
  Tractor +-down- TractorSize
  Vehicle o-- EngineType : engineType
  Vehicle +-down- EngineType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
